# bristol_test

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  readme_doc.md  start.sh  warehouse.db
app/: main.py
app/api/: routers.py
app/core/: config.py
app/models/: database.py
app/services/: kafka_consumer.py  warehouse_services.py
migrations/: env.py
migrations/versions/: 1771908923cc_initial_migration.py
tests/: test_api.py
