[tool.poetry]
name = "bristol-test"
version = "0.1.0"
description = "Сервис для мониторинга состояния склада"
authors = ["Roman <your@email.com>"]
readme = "readme_doc.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
kafka-python = "^2.0.2"
SQLAlchemy = "^2.0.25"
databases = {extras = ["sqlite"], version = "^0.9.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 